--- a/blogpost.html
+++ b/blogpost.html
@@ -9,5 +9,9 @@
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
     </body>
 </html>
