--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
+        <div id="Container">Cabecera</div>
         <h1>La superioridad de los cantos gregorianos</h1>
         <p> Y esta es la parabola del  inicio</p>
 
@@ -12,6 +13,6 @@
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
+
     </body>
 </html>
