--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <h1>La superioridad de los cantos gregorianos</h1>
         <p> Y esta es la parabola del  inicio</p>
+        <p> La importancia de la patria y libertad</p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
