Coloqué la palabra cerdo

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="Container">Cabecera</div>
         <h1>La superioridad de los cantos gregorianos</h1>
-        <p> Y esta es la parabola del  inicio</p>
+        <p> Y esta es la parabola del  cerdo</p>
         <p> La importancia de la patria y libertad c: </p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
