--- a/blogpost.html
+++ b/blogpost.html
@@ -1,23 +1,21 @@
 <html>
     <head>
         <title>Bienvenido a Hyperblog 2.0</title>
-        <link rel="stylesheet" href="css/estilos.css"/>
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <div id="Container">Cabecera</div>
-        <h1>La superioridad de los cantos gregorianos</h1>
-        <p> Y esta es la parabola del  patriota</p>
-        <p> suscribete y dale like</p>
-        <p> La importancia de la patria y libertad c: </p>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+        <div id="container">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
+            </div>
+        </div>
     </body>
 </html>
