--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <h1>La superioridad de los cantos gregorianos</h1>
         <p> Y esta es la parabola del  patriota</p>
         <p> suscribete y dale like</p>
-        <p> La importancia de la patria y libertad c: </p>
+        <p> La importancia de la patria y libertad <3 </p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
