--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
         <h1>La superioridad de los cantos gregorianos</h1>
         <p> Y esta es la parabola del  patriota</p>
         <p> suscribete y dale like</p>
+        <p> <img src="imagenes/Codigo acceso al gimnasio.png" width="100%"> </p>
         <p> La importancia de la patria y libertad <3 </p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
