--- a/blogpost.html
+++ b/blogpost.html
@@ -18,11 +18,10 @@
             </div>
         </div>
         <div id="Container">Cabecera</div>
-        <h1>La superioridad de los cantos gregorianos</h1>
-        <p> Y esta es la parabola del  patriota</p>
+        <h1>Cantos gregorianos</h1>
         <p> suscribete y dale like</p>
         <p> <img src="imagenes/Codigo acceso al gimnasio.png" width="100%"> </p>
-        <p> La importancia de la patria y libertad <3 </p>
+        <p> La importancia de la libertad <3 </p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lK6QEE81euI" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
